# ballgame

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  TRAINING.md  audit_record.md  code_review_audits.md  code_review_guidelines.md  code_review_prompt.md  codex_bevy_resource.md  codex_investigations.md  codex_todo.md  functional_spec.md  milestones.md  open_questions.md  rankings_v4_20260125_161950.txt  scratch.txt  teams-design.md  todo.md  todone.md
.cargo/: config.toml
assets/: ai_profiles.txt  ball_options.txt  init_settings.json  levels.txt  palettes.txt  test_levels.txt  training_settings.template.json  tuning_targets.toml
config/: ai_profiles.txt  analysis_requests.json  debug_logging.json  game_presets.txt  gameplay_tuning.json  gameplay_tuning_baseline.json  heatmap_variants_m4j1.json  init_settings.json  levels.txt  simulation_settings.template.json  test_levels.txt  training_settings.template.json
docs/: ai-simulation-plan.md  event-format.md
docs/analysis/: ai_defense_reference.md  ai_shot_analysis.md  balance-testing-workflow.md  tournament_analysis.md  tuning_workflows.md
docs/archive/: AI_EVOLUTION_NOTES.md  ai_defense_reference.md  code_review_2026-01-25.md  code_review_audits.md  game_systems_tuning_investigation.md  ps5_controller_macos_investigation.md  test_coverage_audit.md  variant_tournament_workflow.md
docs/design/: 2v2.md  art-direction.md  event-format.md  (+1 more)
notes/: ai-plugin-plan.md  ai_shot_analysis.md  balance-testing-workflow.md  dpad-menu-ux.md  heatmaap_tuning_preconfig_20260127_0123.md  heatmaap_tuning_res20260126_233931.md  heatmaap_tuning_res20260127_001002.md  heatmaap_tuning_res20260127_002340.md  heatmaap_tuning_res20260127_002557.md  testing-plan.md
offline_training/: calc_training_minutes.py  check_offline_training.py  db_list.txt  manual_todo.md  merge_training_dbs.py
scripts/: analyze_training.py  export_reachability.py  generate_heatmaps.sh  generate_level_showcase.sh  heatmap_from_db.py  heatmap_svg.py  parse_training.py  regression.sh  run_variant_tournaments.py  run_variant_tournaments.sh  screenshot.sh  setup.sh  test-all.sh
showcase/: reachability_heatmap.html
snapshots/: 20260125_201342_664_startup.json
src/: config_watcher.rs  constants.rs  countdown.rs  debug_logging.rs  helpers.rs  lib.rs  main.rs  settings.rs  snapshot.rs  steal.rs  tuning.rs
tools/: README.md
(+230 files in other folders)
