[package]
name = "ballgame"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.17.3"
features = [
    "wayland",
    "bevy_debug_stepping",
    # "dynamic_linking",     # Dynamic linking for faster compile-times
    "asset_processor",     # Enable asset processing support
    "bevy_debug_stepping", # Enable stepping through ECS systems for debugging
    "bevy_dev_tools",      # Extra dev functionality (like FPS overlay)
    "file_watcher",        # Asset hot-reloading
]
