[package]
name = "ballgame"
version = "0.1.0"
edition = "2024"
default-run = "ballgame"

[lib]
name = "ballgame"
path = "src/lib.rs"

[[bin]]
name = "ballgame"
path = "src/main.rs"

[[bin]]
name = "heatmap"
path = "src/bin/heatmap.rs"

[[bin]]
name = "generate_ball"
path = "src/bin/generate_ball.rs"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[dependencies]
rand = "0.8"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.bevy]
version = "0.17.3"
features = [
    "wayland",
    "bevy_debug_stepping",
    # "dynamic_linking",     # Dynamic linking for faster compile-times
    "asset_processor",     # Enable asset processing support
    "bevy_debug_stepping", # Enable stepping through ECS systems for debugging
    "bevy_dev_tools",      # Extra dev functionality (like FPS overlay)
    "file_watcher",        # Asset hot-reloading
]
